--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,13 @@ android {
         }
     }
 
+    buildTypes.each {
+        it.buildConfigField 'String', 'BASE_URL', "\"https://pixabay.com/api/\"";
+        it.buildConfigField 'String', 'PIXABAY_KEY', "\"your_key\""
+        it.buildConfigField 'String', 'UNSPLASH_URL', "\"https://api.unsplash.com/search/photos/?client_id=your_id\""
+        it.buildConfigField 'String', 'YOUTUBE_URL', "\"https://www.googleapis.com/youtube/v3/playlistItems?key=your_key&fields=items&part=snippet&maxResults=60\""
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
